deploy-monitoring/bases/prometheus/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ClusterIP
  selector:
    prometheus: main
  ports:
    - name: prometheus
      port: 9090
      targetPort: 9090
      protocol: TCP
